--- a/service/.env.example
+++ b/service/.env.example
@@ -1,5 +1,5 @@
 # OpenAI API Key - https://platform.openai.com/overview
-OPENAI_API_KEY=
+OPENAI_API_KEY=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
 
 # change this to an `accessToken` extracted from the ChatGPT site's `https://chat.openai.com/api/auth/session` response
 OPENAI_ACCESS_TOKEN=
@@ -25,7 +25,7 @@ TIMEOUT_MS=100000
 MAX_REQUEST_PER_HOUR=
 
 # Secret key
-AUTH_SECRET_KEY=
+AUTH_SECRET_KEY=merit
 
 # Socks Proxy Host
 SOCKS_PROXY_HOST=
